--- a/pathfinder/src/main/resources/templates/fragments/guest-nav.html
+++ b/pathfinder/src/main/resources/templates/fragments/guest-nav.html
@@ -4,10 +4,10 @@
             <a href="/">Home</a>
         </li>
         <li>
-            <a href="/">Login</a>
+            <a href="/login">Login</a>
         </li>
         <li>
-            <a href="/">Register</a>
+            <a th:href="@{/register}">Register</a>
         </li>
         <li>
             <a href="/">About</a>
