--- a/pathfinder/src/main/resources/templates/register.html
+++ b/pathfinder/src/main/resources/templates/register.html
@@ -40,7 +40,7 @@
                         <small id="usernameError"
                                class="invalid-feedback bg-danger rounded">Username length must be more than 3 characters</small>
 
-                        <small id="usernameUniqueError"
+                        <small th:if="${false}" id="usernameUniqueError"
                                class=" bg-danger rounded">Username is already occupied</small>
 
                     </div>
