--- a/pathfinder/src/main/resources/templates/register.html
+++ b/pathfinder/src/main/resources/templates/register.html
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-center ">
         <div class="row g-3">
             <form
-                    th:object="${user}"
+                    th:object="${userRegisterBindingModel}"
                     th:action="@{/users/register}"
                     th:method="post">
                 <div>
