--- a/pathfinder/src/main/resources/templates/register.html
+++ b/pathfinder/src/main/resources/templates/register.html
@@ -36,7 +36,7 @@
                         <label for="inputFullName" class="col-form-label ">Full Name</label>
                     </div>
                     <div class="col-auto">
-                        <input th:field="*{username}"
+                        <input th:field="*{fullName}"
                                required minlength="5" maxlength="20"
                                type="text"
                                id="inputFullName"
