Updated User classes

--- a/pathfinder/src/main/resources/templates/fragments/common.html
+++ b/pathfinder/src/main/resources/templates/fragments/common.html
@@ -39,7 +39,10 @@
                     <a href="/routes/add">Add new route</a>
                 </li>
                 <li>
-                    <a href="/users/profile">Profile</a>
+
+       <!--    подаване на id като path-variable ({id}) за да може динамично да прихване ид-то на текущия потребител
+                и текущото ид да е равно на ид-то от обекта (  (id = *{id})   )-->
+                    <a th:href="@{/users/profile/{id}(id = ${@currentUser.id})}">Profile</a>
                 </li>
                 <li>
                     <a href="/">Admin</a>
