--- a/pathfinder/src/main/resources/templates/login.html
+++ b/pathfinder/src/main/resources/templates/login.html
@@ -34,12 +34,16 @@
                     <h5 th:if="${!isExists}" class="bg-danger">Incorrect username or password!</h5>
                     <div class="col-auto">
                         <input type="text"
-                               th:field ="*{username}"
+                               th:field="*{username}"
+                               th:errorclass="'is-invalid' bg-danger"
                                required minlength="4" maxlength="20"
                                id="inputUsername"
                                class="form-control"
                                aria-describedby="usernameHelpInline">
                     </div>
+                    <small class="invalid-feedback">
+                        <span class="bg-danger">Username is not correct!</span>
+                    </small>
                 </div>
                 <div>
                     <div class="col-auto">
@@ -47,7 +51,7 @@
                     </div>
                     <div class="col-auto">
                         <input type="password"
-                               th:field ="*{password}"
+                               th:field="*{password}"
                                required minlength="4" maxlength="20"
                                id="inputPassword" class="form-control"
                                aria-describedby="passwordHelpInline">
