--- a/pathfinder/src/main/resources/templates/add-route.html
+++ b/pathfinder/src/main/resources/templates/add-route.html
@@ -29,8 +29,8 @@
                         id="inputName"
                         class="form-control"
                         aria-describedby="inputNameError">
-                <small id="inputNameError"
-                       class="invalid-feedback bg-danger rounded">Name length must be more than 3 characters</small>
+                <small id="inputNameError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                       class="invalid-feedback rounded">Name length must be more than 3 characters</small>
 
             </div>
         </div>
