--- a/pathfinder/src/main/resources/templates/fragments/common.html
+++ b/pathfinder/src/main/resources/templates/fragments/common.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -20,7 +22,7 @@
 <header th:fragment="navigation">
     <nav class="main-nav">
         <ul>
-            <th:block >
+            <th:block sec:authorize="!isAuthenticated()">
                 <li>
                     <a href="/">Home</a>
                 </li>
@@ -34,7 +36,7 @@
                     <a href="/about">About</a>
                 </li>
             </th:block>
-            <th:block >
+            <th:block  sec:authorize="isAuthenticated()">
                 <li>
                     <a href="/routes/add">Add new route</a>
                 </li>
@@ -43,7 +45,7 @@
        <!--    подаване на id като path-variable ({id}) за да може динамично да прихване ид-то на текущия потребител
                 и текущото ид да е равно на ид-то от обекта (  (id = *{id})   )-->
 <!--                    <a th:href="@{/users/profile/{id}(id = ${@currentUser.id})}">Profile</a>-->
-                    <a href="#"> Profile </a>
+                    <a href="/"> Profile </a>
                 </li>
                 <li>
                     <a href="/">Admin</a>
