--- a/pathfinder/src/main/resources/templates/login.html
+++ b/pathfinder/src/main/resources/templates/login.html
@@ -24,26 +24,20 @@
         <div class="row g-3 align-items-center">
 
             <form
-                    th:object="${userLoginBindingModel}"
                     th:action="@{/users/login}"
                     th:method="post">
                 <div>
                     <div class="col-auto">
-                        <label for="inputUsername" class="col-form-label ">Username</label>
+                        <label for="email" class="col-form-label ">Email</label>
                     </div>
-                    <h5 th:if="${!isExists}" class="bg-danger">Incorrect username or password!</h5>
                     <div class="col-auto">
                         <input type="text"
-                               th:field="*{username}"
-                               th:errorclass="'is-invalid' bg-danger"
+                               name="email"
                                required minlength="4" maxlength="20"
-                               id="inputUsername"
+                               id="email"
                                class="form-control"
                                aria-describedby="usernameHelpInline">
                     </div>
-                    <small class="invalid-feedback">
-                        <span class="bg-danger">Username is not correct!</span>
-                    </small>
                 </div>
                 <div>
                     <div class="col-auto">
@@ -51,7 +45,7 @@
                     </div>
                     <div class="col-auto">
                         <input type="password"
-                               th:field="*{password}"
+                               name="password"
                                required minlength="4" maxlength="20"
                                id="inputPassword" class="form-control"
                                aria-describedby="passwordHelpInline">
