--- a/pathfinder/src/main/resources/templates/fragments/common.html
+++ b/pathfinder/src/main/resources/templates/fragments/common.html
@@ -38,6 +38,9 @@
             </th:block>
             <th:block  sec:authorize="isAuthenticated()">
                 <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
                     <a href="/routes/add">Add new route</a>
                 </li>
                 <li>
@@ -49,6 +52,9 @@
                 </li>
                 <li>
                     <a href="/">Admin</a>
+                </li>
+                <li>
+                    <a href="/about">About</a>
                 </li>
                 <li>
                     <a href="/users/logout">Logout</a>
