--- a/pathfinder/src/main/resources/templates/route-details.html
+++ b/pathfinder/src/main/resources/templates/route-details.html
@@ -7,7 +7,8 @@
 
     <header th:replace="/fragments/common::navigation"></header>
 
-    <input type="hidden" name="routeId" id="routeId">
+    <input type="hidden" name="routeId" id="routeId" th:value="${route.id}">
+
     <div class="details-main" th:object="${route}">
         <section class="route-info text-center">
             <h4 id="track-name" th:text="*{name}"></h4>
@@ -98,8 +99,8 @@
     </div>
     <!-- Scripts: track and comments
     <script th:src="@{/js/track.js}"></script>
-    <script th:src="@{/js/comments.js}"></script>
     -->
+    <script th:src="@{/js/comments.js}"></script>
 </div>
 <footer th:replace="fragments/common::footer"></footer>
 </body>
