--- a/pathfinder/src/main/resources/templates/route-details.html
+++ b/pathfinder/src/main/resources/templates/route-details.html
@@ -62,8 +62,8 @@
 
             <div>
                 <!-- Comments submission -->
-                <form id="commentForm" method="POST"
-                      action="/">
+                <form id="commentForm" th:method="POST"
+                      th:action="@{/api/{routeId}/comments(routeId=${route.id})}">
                     <div class="form-group">
                         <h4>Leave a comment</h4>
                         <label for="message">Message</label>
