--- a/pathfinder/src/main/resources/templates/profile.html
+++ b/pathfinder/src/main/resources/templates/profile.html
@@ -8,14 +8,16 @@
     <div class="container mt-5">
         <div class="row d-flex justify-content-center">
             <div class="col-md-7">
-                <div class="profile-card p-3 py-4">
+                <div class="profile-card p-3 py-4" th:object="${user}">
                     <div class="text-center"><img src="/images/profile.jpg" width="100" class="rounded-circle"></div>
-                    <div class="text-center mt-3" th:object="${user}">
+                    <div class="text-center mt-3" >
                         <span class="bg-secondary p-1 px-4 rounded text-white" th:text="*{level.name()}">Pro</span>
                         <h5 class="mt-4 mb-0">Full name</h5>
                         <span th:text="*{fullName}">UI/UX Designer</span>
                         <h5 class="mt-2 mb-0">Username</h5>
                         <span th:text="*{username}">UI/UX Designer</span>
+                        <h5 class="mt-4 mb-0">Email</h5>
+                        <span th:text="*{email}">Email</span>
                         <h5 class="mt-2 mb-0">Age</h5>
                         <span th:text="*{age}">33</span>
                         <div class="px-4 mt-5">
