--- a/pathfinder/src/main/resources/static/css/styles.css
+++ b/pathfinder/src/main/resources/static/css/styles.css
@@ -72,6 +72,25 @@ img {
     box-shadow: var(--shadow);
 }
 
+
+.main-nav button {
+        background: var(--primary);
+        display: block;
+        text-decoration: none;
+        padding: 0.7rem;
+        text-align: center;
+        color: var(--dark);
+        text-transform: uppercase;
+        font-size: 1.1rem;
+        box-shadow: var(--shadow);
+        width: 300px
+}
+
+.main-nav button:hover {
+    background: var(--dark);
+    color: var(--light);
+}
+
 .main-nav a:hover {
     background: var(--dark);
     color: var(--light);
