Added navigation bar to login and register pages

--- a/pathfinder/src/main/resources/templates/login.html
+++ b/pathfinder/src/main/resources/templates/login.html
@@ -16,6 +16,9 @@
             integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
             crossorigin=""></script>
 </head>
+
+<header th:replace="fragments/common::navigation"></header>
+
 <body>
 <main class="p-5 align-content-center bg-blur my-register-div">
     <h1 class="    border-bottom mb-5">Login</h1>
