--- a/pathfinder/src/main/resources/templates/register.html
+++ b/pathfinder/src/main/resources/templates/register.html
@@ -2,6 +2,9 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="fragments/common::head"></head>
+
+<header th:replace="fragments/common::navigation"></header>
+
 <body>
 <main class="p-5 align-content-center bg-blur my-register-div">
     <h1 class="border-bottom">Register</h1>
