--- a/pathfinder/src/main/resources/templates/fragments/common.html
+++ b/pathfinder/src/main/resources/templates/fragments/common.html
@@ -77,7 +77,7 @@
 <footer th:fragment="footer" class="footer bg-blur rounded">
     <div class="container-fluid text-center">
         <div class="h5 text-white">
-            &copy; Lucho, Chocho & Spring Advanced Students 2022/2023. All rights reserved.
+            &copy; Pathfinder Application 2022. All rights reserved.
         </div>
     </div>
 </footer>
