--- a/pathfinder/src/main/resources/templates/profile.html
+++ b/pathfinder/src/main/resources/templates/profile.html
@@ -26,13 +26,29 @@
                                 nesciunt quis rerum sunt suscipit. </p>
                         </div>
                         <ul class="social-list">
-                            <li><i class="fab fa-facebook-square"></i></li>
-                            <li><i class="fab fa-instagram"></i></li>
-                            <li><i class="fab fa-linkedin"></i></li>
-                            <li><i class="fab fa-google"></i></li>
+                            <li>
+                                <a href="https://www.facebook.com">
+                                <i class="fab fa-facebook-square"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/">
+                                <i class="fab fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com">
+                                <i class="fab fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.google.com">
+                                <i class="fab fa-google"></i>
+                                </a>
+                            </li>
                         </ul>
                         <div class="buttons">
-                            <button class="btn btn-outline-primary px-4">Back</button>
+                            <button th:href="@{/}" class="btn btn-outline-primary px-4">Back</button>
 <!--                            <button class="btn btn-primary px-4 ms-3">Contact</button>-->
                         </div>
                     </div>
