Added back button link

--- a/pathfinder/src/main/resources/templates/profile.html
+++ b/pathfinder/src/main/resources/templates/profile.html
@@ -48,8 +48,10 @@
                             </li>
                         </ul>
                         <div class="buttons">
-                            <button th:href="@{/}" class="btn btn-outline-primary px-4">Back</button>
+                            <a th:href="@{/}">
+                            <button  class="btn btn-outline-primary px-4">Back</button>
 <!--                            <button class="btn btn-primary px-4 ms-3">Contact</button>-->
+                            </a>
                         </div>
                     </div>
                 </div>
